--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -28,6 +28,6 @@ footer a {
 /*MEDIA QUERIE (SML. DEVICES)*/
 @media screen  and (max-width: 600px) {
     footer {
-        margin-top: 30rem;
+        margin-top: 25rem;
     }
 }
